<resources>
    <string name="app_name">WeatherApp</string>
    <string name="my_location_icon">Location icon</string>
    <string name="share_current_location">Share current location</string>
    <string name="search_locations">Search locations</string>
    <string name="no_saved_location_text">No stored locations</string>
    <string name="location_necessary_text">To get local weather data we need access to your device location.</string>
    <string name="try_again">Try again</string>
    <string name="check_location_permission">Make sure your device has location turned on!</string>
    <string name="check_internet_connection">Make sure you have internet connectivity!</string>
    <string name="cant_find_you">We can\'t find you &#128532;</string>
    <string name="unexpected_error">Something unexpected has happened &#128532;</string>
    <string name="speed">Speed</string>
    <string name="direction">Direction</string>

    <string name="humidity_tv">%d%%</string>
    <string name="pressure_tv">%d hPa</string>
    <string name="wind_tv">%d%s</string>
    <string name="temp_tv">%d%s</string>
    <string name="error_icon">Error icon</string>
    <string name="no_location_icon">No location icon</string>
    <string name="today">Today</string>
    <string name="daily">Daily</string>
    <string name="settings">Settings</string>
    <string name="edit_location">Edit location</string>
    <string name="min_icon">Min temperature icon</string>
    <string name="max_icon">Max temperature icon</string>

    <string name="tomorrow">Tomorrow</string>

    <string name="weather_icon">Weather icon</string>

    <string name="temperature">Temperature</string>
    <string name="min_daily">Minimum daily</string>
    <string name="max_daily">Maximum daily</string>
    <string name="night_temp">Nighttime</string>
    <string name="evening_temp">Evening</string>
    <string name="morning_temp">Morning</string>
    <string name="day_temp">Day</string>
    <string name="feels_like_temp">Feels like temperature</string>
    <string name="sun">Sun</string>
    <string name="sunrise">Sunrise</string>
    <string name="sundown">Sunset</string>

    <string name="north">North</string>
    <string name="northeast">Northeast</string>
    <string name="northwest">Northwest</string>
    <string name="west">West</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="southwest">Southwest</string>
    <string name="southeast">Southeast</string>
    <string name="current_weather">Current weather</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>

    <string name="unauthorized">Verification unsuccessful. Check your API key and user information and then try again.</string>
    <string name="unknown_error">There was an error. Try again.</string>
    <string name="invalid_permission">You don\'t have access to this data. Check your access level and try again.</string>
    <string name="server_url_error">Server error. Check the URL and server status and then try again.</string>

    <string name="toolbar_title">%s - %s, %s</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_light_theme">Light</string>
    <string name="settings_dark_theme">Dark</string>
    <string name="settings_default_theme">Default</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_croatian">Croatian</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_german">German</string>
    <string name="settings_units">Units</string>
    <string name="settings_units_standard">Standard</string>
    <string name="settings_units_imperial">Imperial</string>
    <string name="settings_units_metric">Metric</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="num_of_days">Number of days used for daily weather</string>
</resources>