<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.settings.SettingsFragment">

        <TextView
            style="@style/SettingsTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_title_margin_start"
            android:layout_marginTop="@dimen/settings_title_margin_top"
            android:layout_marginBottom="@dimen/settings_title_margin_bottom"
            android:text="@string/settings_theme"
            android:textAllCaps="true" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/themeButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/settings_button_group_margin_horizontal"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_theme_light"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_light_theme" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_theme_dark"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_dark_theme" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_theme_default"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_default_theme" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            style="@style/SettingsTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_title_margin_start"
            android:layout_marginTop="@dimen/settings_title_margin_top"
            android:layout_marginBottom="@dimen/settings_title_margin_bottom"
            android:text="@string/settings_language"
            android:textAllCaps="true" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/languageButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/settings_button_group_margin_horizontal"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_language_croatian"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_language_croatian" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_language_english"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_language_english" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_language_german"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_language_german" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            style="@style/SettingsTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_title_margin_start"
            android:layout_marginTop="@dimen/settings_title_margin_top"
            android:layout_marginBottom="@dimen/settings_title_margin_bottom"
            android:text="@string/settings_units"
            android:textAllCaps="true" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/unitsButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/settings_button_group_margin_horizontal"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_units_standard"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_units_standard" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_units_imperial"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_units_imperial" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_units_metric"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings_units_metric" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            style="@style/SettingsTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_title_margin_start"
            android:layout_marginTop="@dimen/settings_title_margin_top"
            android:layout_marginBottom="@dimen/settings_title_margin_bottom"
            android:text="@string/num_of_days"
            android:textAllCaps="true" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/daysButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/settings_button_group_margin_horizontal"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_days_3"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_days_4"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_days_5"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_days_6"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_days_7"
                style="@style/ToggleMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>
</layout>