<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.no_location.NoLocationSavedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/screenBackground">

        <ImageView
            android:id="@+id/iv_location"
            style="@style/BaseImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/image_margin_bottom"
            android:contentDescription="@string/my_location_icon"
            android:src="@drawable/ic_my_location_24"
            app:layout_constraintBottom_toTopOf="@+id/tv1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_horizontal_15" />

        <TextView
            android:id="@+id/tv1"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/title_margin_horizontal"
            android:text="@string/no_saved_location_text"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv2"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/description_margin_horizontal"
            android:layout_marginTop="@dimen/description_margin_top"
            android:text="@string/location_necessary_text"
            android:textSize="@dimen/description_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_current_location"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_margin_horizontal"
            android:text="@string/share_current_location"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_search_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search_location"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_margin_horizontal"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:text="@string/search_locations"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>