<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.no_internet_connection.NoInternetConnectionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/screenBackground">

        <ImageView
            android:id="@+id/iv_no_internet"
            style="@style/BaseImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/image_margin_bottom"
            android:contentDescription="@string/error_icon"
            android:src="@drawable/ic_wifi_off_24"
            app:layout_constraintBottom_toTopOf="@+id/tv_unexpected_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_15" />

        <TextView
            android:id="@+id/tv_unexpected_error"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/title_margin_horizontal"
            android:text="@string/unexpected_error"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_check_internet"
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/description_margin_horizontal"
            android:layout_marginTop="@dimen/description_margin_top"
            android:text="@string/check_internet_connection"
            android:textSize="@dimen/description_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_unexpected_error" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_try_again"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/button_margin_horizontal"
            android:layout_marginVertical="@dimen/button_margin_vertical"
            android:text="@string/try_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_no_internet"
            app:layout_constraintStart_toEndOf="@+id/iv_no_internet" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>