<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="day"
            type="hr.dice.damir_stipancic.weatherapp.ui.daily_weather.DailyWeatherItem" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/card_margin_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/DailyWeatherCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                style="@style/BaseImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/daily_pager_icon_margin"
                android:contentDescription="@string/max_icon"
                app:layout_constraintBottom_toBottomOf="@+id/tv_max_temp"
                app:layout_constraintEnd_toStartOf="@+id/tv_max_temp"
                app:layout_constraintTop_toTopOf="@+id/tv_max_temp"
                app:srcCompat="@drawable/ic_arrow_upward_24" />

            <TextView
                android:id="@+id/tv_day"
                style="@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/daily_pager_day_text_margin_top"
                tools:text="Srijeda"
                app:day="@{day.date}"
                android:textSize="@dimen/daily_pager_day_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/daily_pager_date_text_margin_top"
                tools:text="2.2"
                android:text="@{day.formattedDate}"
                android:textSize="@dimen/daily_pager_date_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_day" />

            <TextView
                android:id="@+id/tv_avg_temp"
                style="@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="6°"
                android:text="@{day.dayTemp}"
                android:textSize="@dimen/daily_pager_temp_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_min_temp"
                style="@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/daily_pager_min_max_temp_text_margin_top"
                tools:text="4°"
                android:text="@{day.minTemp}"
                android:textSize="@dimen/daily_pager_temp_min_max_text_size"
                app:layout_constraintEnd_toStartOf="@+id/tv_max_temp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_avg_temp" />

            <TextView
                android:id="@+id/tv_max_temp"
                style="@style/BaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/daily_pager_min_max_temp_text_margin_top"
                tools:text="8°"
                android:text="@{day.maxTemp}"
                android:textSize="@dimen/daily_pager_temp_min_max_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_min_temp"
                app:layout_constraintTop_toBottomOf="@+id/tv_avg_temp" />

            <ImageView
                android:id="@+id/imageView"
                style="@style/BaseImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/daily_pager_icon_margin"
                android:contentDescription="@string/min_icon"
                app:layout_constraintBottom_toBottomOf="@+id/tv_min_temp"
                app:layout_constraintEnd_toStartOf="@+id/tv_min_temp"
                app:layout_constraintTop_toTopOf="@+id/tv_min_temp"
                app:srcCompat="@drawable/ic_arrow_downward_24" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="58%"
                android:text="@{day.humidity}"
                android:textSize="@dimen/daily_pager_value_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView12"
                app:layout_constraintEnd_toStartOf="@+id/textView10"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1009 hPa"
                android:text="@{day.pressure}"
                android:textSize="@dimen/daily_pager_value_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView13"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="14 km/h"
                android:text="@{day.windSpeed}"
                android:textSize="@dimen/daily_pager_value_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/daily_pager_value_title_margin_bottom"
                android:text="@string/humidity"
                android:textSize="@dimen/daily_pager_value_title_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/daily_pager_value_title_margin_bottom"
                android:text="@string/pressure"
                android:textSize="@dimen/daily_pager_value_title_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/daily_pager_value_title_margin_bottom"
                android:text="@string/wind"
                android:textSize="@dimen/daily_pager_value_title_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/textView11" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
